EKS/1-north-south-Nginx-IngressController/06-nginx-ingress-roles-rolebindings.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
