EKS/1-north-south-Nginx-IngressController/04-csrx1-payg-nginx-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csrx1-payg
  labels:
    app: csrx1-payg
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: csrx1-payg
  template:
    metadata:
      name: csrx1-payg
      labels:
        app: csrx1-payg
      annotations:
        k8s.v1.cni.cncf.io/networks: br-51@eth1, br-52@eth2
    spec:      
      serviceAccountName: csrxpod
      containers:
      - name: csrx1-payg
        securityContext:
           privileged: true
        #image: 298183613488.dkr.ecr.us-west-2.amazonaws.com/payg:0221 
        image: 610418335740.dkr.ecr.us-west-2.amazonaws.com/csrx-ft:0505eval
        ports:
          - containerPort: 80
        volumeMounts:
        - name: disk
          mountPath: "/dev"
        - name: config
          mountPath: "/var/jail"
      volumes:
      - name: disk
        hostPath:
          path: /dev
          type: Directory
      - name: config
        configMap:
          name: cm-payg
          items:
          - key: csrx_config
            path: csrx_config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csrx1-payg
  name: csrx1-payg
spec:
  selector:
      app: csrx1-payg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
